<resources>
    <string name="app_name">Bulk SMS</string>
    <string name="welcome_to_pro_sms_sender_not_equal">Welcome to Pro SMS Sender!</string>
    <string name="all_right_reserved">All right reserved by ahsensaeed.com</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="choose_a_txt_file">Choose a .txt file</string>
    <string name="message">Write your message here</string>
    <string name="send_bulk_sms">Send Bulk Sms</string>
    <string name="storage_permission_denied_content">Pro Sms Sender App requires the <b>Storage Permission</b> in order to read
        the contact number list file.
    </string>
    <string name="sms_permission_denied_content">Pro Sms Sender App requires the <b>Sms Send permission</b> in order to send
        sms to contact number list file.
    </string>
    <string name="sms_permission_denied">Sms Permission Denied</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
    <string name="the_selected_file_is_empty">The selected file is empty. Please select file of user contacts.</string>
    <string name="add_another_text_file">Add another .txt file</string>
    <string name="sms_content_cannot_be_empty">Sms content cannot be empty!</string>
    <string name="please_first_select_contact_list">Please first select .txt contact list file.</string>
    <string name="note_colon">Note :</string>
    <string name="avoid_blocking_your_sim_content">In order to send bulk sms to your customers you need to add delay
        after sending one sms. For example, in Pakistan your sim will be blocked if you send 200 sms with in 15 minutes.
        Please first search how many sms you can send in within a minutes then add the delay accordingly.
    </string>
    <string name="select_delay_after_sending_one_sms">Select delay after sending one sms.(in seconds)</string>
    <string name="_two">2</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="delay_must_be_greater_than_two_seconds">Delay must be greater than four seconds.</string>
    <string name="delete_all_bulk_sms_from_message_history">Delete all bulk sms from message history.</string>
    <string name="delete_all">Delete All</string>
    <string name="store_bulk_sms_in_message_history">Store bulk sms in message history.</string>
    <string name="donate_us_by_watching_the_ad">Donate us by watching the ad.</string>
    <string name="show_ad">Show Ad</string>
    <string name="no_of_sms_sent">Total no of sms sent:</string>
    <string name="start_time">Start-time</string>
    <string name="end_time">End-time</string>
    <string name="sms_content_colon">Sms Content :</string>
    <string name="looks_like_you_have_not_send_any_bulk_sms_yet_or_may_be_your_history_is_off">Looks like you haven\'t
        send any bulk sms yet or maybe your history is turned off.
    </string>
    <string name="all_sms_history_deleted_successfully">All sms history deleted successfully.</string>
    <string name="about_app_content">-> Get your messages across with Pro Sms Bulk Sender App. Using this platform you can quickly send any short and important message to worldwide or locally in your country. You can easily send SMS alerts or promotional messages from your mobile. The sms charges may apply for sending the messages. \n\n -> This is a small and powerful application that enables users to send generic and customized SMS messages through their carrier network to contact that are listed in a .txt input file. \n\n Contact Me\n\n <strong>email: </strong>ahsansaeed067@gmail.com\n <strong>Website: </strong>ahsensaeed.com/contact-me</string>
    <string name="sms_sent_successfully_content">All sms of recipients will be sent successfully. You can track progress
        in the notification bar.
    </string>
    <string name="bulk_sms_sent">Bulk Sms Sent</string>
    <string name="feature_not_added_yet">Feature not added yet.</string>
    <string name="all_contact_numbers_in_file_is_not_valid">All contact numbers in file is not valid. Please select
        different file.
    </string>
    <string name="a_service_already_running_for_sending_bulk_sms_please_wait_until_it_finishes">A service already running for sending bulk sms please, wait until it finishes</string>
    <string name="no_of_sms_to_be_sent">Total no of sms to be sent:</string>
    <string name="sms_send">Sms Send</string>
    <string name="are_you_sure_you_want_to_cancel_the_on_going_operation">Are you sure you want to cancel the on-going bulk sms sending operation?</string>
    <string name="cancelled_time">Cancelled-time</string>
    <string name="bulk_sms_process_cancelled">Bulk sms process cancelled.</string>
    <string name="carrier_number">Carrier Number</string>
    <string name="no_carrier_number_found_content">We found that you don\'t have any Carrier number installed in this device. So, first add a carrier number then only you can send SMS.</string>
    <string name="allow_following_permission">Allow Bulk SMS following permission</string>
    <string name="read_phone_state_permission_content"><b>Read Phone State:</b> This let us to read the carrier numbers used on this device. You can also apply settings from which carrier numbers you want to send Bulk SMS after granting the permission.</string>
    <string name="phone_state_permission_denied_content">Pro Sms Sender App requires the <b>Read Phone State permission</b> in order to retrieve the current used carrier number.</string>
    <string name="phone_state_permission_denied">Phone State Permission Denied</string>
    <string name="please_select_from_which_carrier_number_you_want_to_send_bulk_sms">Please select from which carrier number you want to send the Bulk SMS. You can always change the number from settings.</string>
    <string name="change_carrier_number">Change Carrier Number</string>
    <string name="setting_default_carrier_content">The carrier<b>%1$s</b> is using for sending Bulk SMS. The change carrier option will be displayed when the device has multiple carrier numbers.</string>
    <string name="carrier_number_used_to_send_this_bulk_sms">Carrier number used to send the Bulk SMS</string>
    <string name="limit_exceeds_please_send_bulk_sms_less_than_thousand_contacts">Limit exceeds please send bulk sms less than thousand contacts</string>
    <string name="number_of_contacts_showing">Number of contacts showing : %1$d</string>
    <string name="contact_list_must_not_be_empty">Contact list must not be empty!</string>
</resources>