<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightGrey"
        tools:context=".activities.main.fragments.mainScreen.tabFragments.settings.ui.SettingsFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:id="@+id/bulkSmsSettingNoteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/select_delay_after_sending_one_sms"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text_size" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_secondary_color_outline"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/bulkSmsSettingDelaySmsDecrementTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/minus"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/bigger_text_size" />

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText" />

            <TextView
                    android:id="@+id/bulkSmsSettingDelayTextView"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/_two"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/bigger_text_size" />

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText" />

            <TextView
                    android:id="@+id/bulkSmsSettingDelaySmsIncrementTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/plus"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/bigger_text_size" />

        </LinearLayout>

        <TextView
                android:id="@+id/bulkSmsSettingDelaySmsErrorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorRed"
                android:textSize="12sp"
                android:visibility="gone" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/delete_all_bulk_sms_from_message_history"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text_size" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/bulkSmsSettingDeleteAllSmsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/delete_all"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:backgroundTint="@color/colorRed" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bulkSmsSettingDefaultCarrierNumberTextView"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorPrimaryText"
                android:visibility="gone"
                android:textSize="@dimen/small_text_size"
                tools:text="The carrier number 03218878961 is using for sending Bulk SMS. To change carrier number, option will be displayed here when the device has multiple carrier numbers." />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/bulkSmsSettingChangeCarrierButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/change_carrier_number"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:visibility="gone"
                app:backgroundTint="@color/colorLightBlue" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/donate_us_by_watching_the_ad"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/small_text_size" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/bulkSmsSettingShowAdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/show_ad"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

    </LinearLayout>

</ScrollView>