<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
                  android:orientation="vertical"
                  android:padding="10dp"
                  android:layout_height="wrap_content">

        <RelativeLayout android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:textColor="@color/colorSecondaryText"
                      android:textSize="@dimen/small_text_size"
                      android:text="@string/no_of_sms_sent"
                      android:layout_centerVertical="true"
                      android:id="@+id/smsHistorySingleViewSmsCountTitleTextView"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="match_parent"
                      android:layout_marginStart="10dp"
                      android:layout_marginEnd="10dp"
                      android:layout_centerVertical="true"
                      android:layout_toEndOf="@+id/smsHistorySingleViewSmsCountTitleTextView"
                      android:id="@+id/smsHistorySingleViewSmsCountTextView"
                      android:textSize="@dimen/small_text_size"
                      android:textColor="@color/colorPrimaryText"
                      tools:text="123"
                      android:layout_toStartOf="@+id/smsHistorySingleViewDeleteImageView"
                      android:layout_height="wrap_content"
                      android:layout_toRightOf="@+id/smsHistorySingleViewSmsCountTitleTextView"
                      android:layout_toLeftOf="@+id/smsHistorySingleViewDeleteImageView"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_alignParentEnd="true"
                       android:layout_alignParentRight="true"
                       android:contentDescription="@null"
                       android:id="@+id/smsHistorySingleViewDeleteImageView"
                       android:clickable="true"
                       app:srcCompat="@drawable/black_delete_vector_icon"
                       android:focusable="true"
                       android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView android:layout_width="match_parent"
                  android:textSize="@dimen/small_text_size"
                  android:layout_marginTop="5dp"
                  android:id="@+id/smsHistorySingleViewSmsContentTextView"
                  tools:text="Sms Content: This message will not be visible unless you sent the proper message to someone."
                  tools:textColor="@color/colorSecondaryText"
                  android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_marginTop="10dp"
                      android:orientation="horizontal"
                      android:weightSum="2"
                      android:baselineAligned="false"
                      android:layout_height="wrap_content">

            <LinearLayout android:layout_width="0dp"
                          android:layout_weight="1"
                          android:orientation="vertical"
                          android:gravity="center_horizontal"
                          android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content"
                          android:gravity="center"
                          android:textSize="@dimen/small_text_size"
                          android:textColor="@color/colorSecondaryText"
                          android:drawableStart="@drawable/green_circle_drawable"
                          android:text="@string/start_time"
                          android:drawablePadding="10dp"
                          android:layout_height="wrap_content"
                          android:drawableLeft="@drawable/green_circle_drawable"/>

                <TextView android:layout_width="match_parent"
                          android:layout_marginTop="3dp"
                          android:textColor="@color/colorPrimaryText"
                          android:textSize="@dimen/small_text_size"
                          android:gravity="center"
                          android:id="@+id/smsHistorySingleViewSmsStartTextView"
                          tools:text="Mon 19 July 10:30:20"
                          android:layout_height="wrap_content"/>

            </LinearLayout>

            <View android:layout_width="0.5dp"
                  android:background="@color/colorSecondaryText"
                  android:layout_height="match_parent"/>

            <LinearLayout android:layout_width="0dp"
                          android:layout_weight="1"
                          android:orientation="vertical"
                          android:gravity="center_horizontal"
                          android:layout_height="wrap_content">

                <TextView android:layout_width="wrap_content"
                          android:gravity="center"
                          android:textSize="@dimen/small_text_size"
                          android:textColor="@color/colorSecondaryText"
                          android:drawableStart="@drawable/red_circle_drawable"
                          android:drawablePadding="10dp"
                          android:drawableLeft="@drawable/red_circle_drawable"
                          android:text="@string/end_time"
                          android:layout_height="wrap_content"/>

                <TextView android:layout_width="match_parent"
                          android:layout_marginTop="3dp"
                          android:textColor="@color/colorPrimaryText"
                          android:textSize="@dimen/small_text_size"
                          android:id="@+id/smsHistorySingleViewSmsEndTextView"
                          android:gravity="center"
                          tools:text="Mon 19 July 10:30:20"
                          android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>